[gd_scene load_steps=18 format=2]

[ext_resource path="res://assests/Player/idle.png" type="Texture" id=1]
[ext_resource path="res://script/gameboy.gd" type="Script" id=2]
[ext_resource path="res://sounds/jump1.ogg" type="AudioStream" id=3]
[ext_resource path="res://assests/Effects/light.png" type="Texture" id=4]
[ext_resource path="res://assests/Player/walk (2).png" type="Texture" id=5]
[ext_resource path="res://assests/Player/air.png" type="Texture" id=6]
[ext_resource path="res://scenes/Gun.tscn" type="PackedScene" id=7]
[ext_resource path="res://assests/Addons/vest.png" type="Texture" id=8]
[ext_resource path="res://assests/Addons/head phone military.png" type="Texture" id=9]
[ext_resource path="res://assests/Addons/cardboard box.png" type="Texture" id=10]
[ext_resource path="res://sounds/Cardboard.wav" type="AudioStream" id=11]
[ext_resource path="res://sounds/CardboardOpen.wav" type="AudioStream" id=12]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 222, 302 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 222, 0, 222, 302 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 444, 0, 222, 302 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 1 ), ExtResource( 6 ) ],
"loop": true,
"name": "air",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=5]
radius = 86.933
height = 109.585

[node name="gameboy" type="KinematicBody2D" groups=[
"player",
]]
script = ExtResource( 2 )

[node name="Light2D" type="Light2D" parent="."]
visible = false
position = Vector2( 0.218017, -2.7818 )
rotation = -0.00153396
texture = ExtResource( 4 )
texture_scale = 0.98
color = Color( 1, 1, 1, 0.298039 )
energy = 3.99
mode = 2
range_z_min = -20
range_z_max = 20
shadow_enabled = true

[node name="Sprite" type="AnimatedSprite" parent="."]
modulate = Color( 1, 1, 1, 0.8 )
position = Vector2( -5.62134, 17.6515 )
frames = SubResource( 4 )
animation = "jump"
playing = true

[node name="vest" type="Sprite" parent="."]
position = Vector2( -6.80786, 71.3362 )
texture = ExtResource( 8 )

[node name="head phone military" type="Sprite" parent="."]
position = Vector2( -3.89335, -37.8138 )
texture = ExtResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -3.76444, 15.7242 )
shape = SubResource( 5 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="SoundJump" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -12.0
pitch_scale = 1.27

[node name="SoundHurt" type="AudioStreamPlayer" parent="."]

[node name="SoundCardboard" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 11 )

[node name="SoundCardboardOpen" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )

[node name="Node2D" parent="." instance=ExtResource( 7 )]
position = Vector2( -38.9091, 42.0065 )

[node name="cardboard box" type="Sprite" parent="."]
visible = false
position = Vector2( 4.14063, 9.40469 )
texture = ExtResource( 10 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
